// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mobile theme Alert base 1`] = `
Object {
  "Card": Object {
    "bg": undefined,
    "borderColor": "gray12",
    "borderWidth": 1,
    "displayOutside": "block",
    "pb": 12,
    "pl": 16,
    "pr": 16,
    "pt": 10,
    "rounded": 5,
  },
  "Close": Object {
    "bgActive": "black16",
    "bgHover": "black8",
    "color": "gray28",
    "component": #IconCross,
    "pb": 4,
    "pl": 4,
    "position": "absolute",
    "pr": 4,
    "pt": 4,
    "right": 4,
    "rounded": "circle",
    "size": "s",
    "top": 4,
    "transition": "150ms cubic-bezier(0.4, 0, 0.2, 1)",
  },
  "Content": Object {
    "pb": 0,
    "pl": 0,
    "pr": 0,
    "pt": 0,
  },
  "Image": Object {
    "color": undefined,
    "mr": 12,
    "order": 0,
    "size": 20,
    "valignSelf": "top",
  },
}
`;

exports[`mobile theme Alert fuzz: column 1`] = `Object {}`;

exports[`mobile theme Alert fuzz: column=false 1`] = `Object {}`;

exports[`mobile theme Alert fuzz: variant="error" 1`] = `
Object {
  "Card": Object {
    "bg": "red100",
    "borderColor": "transparent",
  },
  "Image": Object {
    "color": "red500",
  },
}
`;

exports[`mobile theme Alert fuzz: variant="primary" 1`] = `
Object {
  "Card": Object {
    "bg": "blue50",
    "borderColor": "transparent",
  },
  "Image": Object {
    "color": "blue600",
  },
}
`;

exports[`mobile theme Alert fuzz: variant="secondary" 1`] = `
Object {
  "Card": Object {
    "bg": "gray4",
    "borderColor": "transparent",
  },
  "Image": Object {
    "color": "gray64",
  },
}
`;

exports[`mobile theme Alert fuzz: variant="success" 1`] = `
Object {
  "Card": Object {
    "bg": "green100",
    "borderColor": "transparent",
  },
  "Image": Object {
    "color": "green600",
  },
}
`;

exports[`mobile theme Alert fuzz: variant="warning" 1`] = `
Object {
  "Card": Object {
    "bg": "orange50",
    "borderColor": "transparent",
  },
  "Image": Object {
    "color": "orange700",
  },
}
`;

exports[`mobile theme Alert snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Card": Array [
      Object {
        "displayOutside": "block",
        "rounded": 12,
      },
      Object {
        "rounded": 5,
      },
      Object {
        "bg": [Function],
        "borderColor": [Function],
        "borderWidth": 1,
        "pb": 22,
        "pl": 24,
        "pr": 24,
        "pt": 20,
      },
      Object {
        "pb": 12,
        "pl": 16,
        "pr": 16,
        "pt": 10,
      },
    ],
    "Close": Array [
      Object {
        "bgActive": "black16",
        "bgHover": "black8",
        "color": "gray28",
        "component": #IconCross,
        "pb": 8,
        "pl": 8,
        "position": "absolute",
        "pr": 8,
        "pt": 8,
        "right": 4,
        "rounded": "circle",
        "size": "s",
        "top": 4,
        "transition": "150ms cubic-bezier(0.4, 0, 0.2, 1)",
      },
      Object {
        "pb": 4,
        "pl": 4,
        "pr": 4,
        "pt": 4,
      },
    ],
    "Content": Array [
      Object {
        "pb": 12,
        "pl": 12,
        "pr": 12,
        "pt": 12,
      },
      Object {
        "pb": 10,
        "pl": 10,
        "pr": 10,
        "pt": 10,
      },
      Object {
        "pb": 0,
        "pl": 0,
        "pr": 0,
        "pt": 0,
      },
    ],
    "Image": Array [
      Object {
        "order": [Function],
      },
      Object {
        "color": [Function],
        "mr": 18,
        "order": 0,
        "size": 28,
        "valignSelf": "top",
      },
      Object {
        "mr": 12,
        "size": 20,
      },
    ],
  },
}
`;

exports[`mobile theme Avatar base 1`] = `
Object {
  "Fallback": Object {
    "component": #IconUser,
    "size": 9.6,
  },
  "Wrapper": Object {
    "align": "center",
    "bg": "gray4",
    "color": "white",
    "fontSize": 12,
    "grow": false,
    "height": 20,
    "overlayActive": "black24",
    "overlayDisabled": "rgba(255, 255, 255, 0.5)",
    "position": "relative",
    "shape": "circle",
    "shrink": false,
    "userSelect": false,
    "valignSelf": "middle",
    "width": 20,
  },
}
`;

exports[`mobile theme Avatar fuzz: isFallback 1`] = `
Object {
  "Wrapper": Object {
    "color": "gray28",
    "valign": "middle",
  },
}
`;

exports[`mobile theme Avatar fuzz: isFallback=false 1`] = `Object {}`;

exports[`mobile theme Avatar fuzz: size=20 1`] = `Object {}`;

exports[`mobile theme Avatar fuzz: size=45 1`] = `
Object {
  "Fallback": Object {
    "size": 21.599999999999998,
  },
  "Wrapper": Object {
    "fontSize": 27,
    "height": 45,
    "width": 45,
  },
}
`;

exports[`mobile theme Avatar fuzz: size=60 1`] = `
Object {
  "Fallback": Object {
    "size": 28.799999999999997,
  },
  "Wrapper": Object {
    "fontSize": 36,
    "height": 60,
    "width": 60,
  },
}
`;

exports[`mobile theme Avatar fuzz: type="company" 1`] = `
Object {
  "Fallback": Object {
    "component": #IconCompanyUser,
  },
}
`;

exports[`mobile theme Avatar fuzz: type="person" 1`] = `Object {}`;

exports[`mobile theme Avatar fuzz: type="shop" 1`] = `
Object {
  "Fallback": Object {
    "component": #IconShopUser,
  },
  "Wrapper": Object {
    "borderRadius": 5,
    "shape": undefined,
  },
}
`;

exports[`mobile theme Avatar snap 1`] = `
Object {
  "defaultProps": Object {
    "size": 20,
    "type": "person",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Fallback": Array [
      Object {
        "component": #IconUser,
        "size": [Function],
      },
      Object {
        "$switch": "type",
        "company": Array [
          Object {
            "component": #IconCompanyUser,
          },
        ],
        "shop": Array [
          Object {
            "component": #IconShopUser,
          },
        ],
      },
    ],
    "Wrapper": Array [
      Object {
        "align": "center",
        "color": "white",
        "fontSize": [Function],
        "grow": false,
        "height": [Function],
        "overlayDisabled": "rgba(255, 255, 255, 0.5)",
        "position": "relative",
        "shape": "circle",
        "shrink": false,
        "userSelect": false,
        "valignSelf": "middle",
        "width": [Function],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "align": "center",
            "bg": "gray4",
            "color": "gray28",
            "valign": "middle",
          },
        ],
      },
      Object {
        "bg": "gray4",
        "overlayActive": "black24",
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "borderRadius": 5,
            "shape": undefined,
          },
        ],
      },
    ],
  },
}
`;

exports[`mobile theme Badge base 1`] = `
Object {
  "Badge": Object {
    "align": "center",
    "bg": "red500",
    "color": "white",
    "cursor": "inherit",
    "fontSize": 12,
    "fontWeight": 600,
    "height": 20,
    "minWidth": 20,
    "pl": 6.5,
    "pr": 6.5,
    "shape": "circle",
    "userSelect": false,
    "zIndex": 2,
  },
}
`;

exports[`mobile theme Badge fuzz: size="l" 1`] = `
Object {
  "Badge": Object {
    "fontSize": 14,
    "height": 24,
    "minWidth": 24,
    "pl": 8,
    "pr": 8,
  },
}
`;

exports[`mobile theme Badge fuzz: size="l" kind="flat" 1`] = `
Object {
  "Badge": Object {
    "align": undefined,
    "bg": undefined,
    "color": undefined,
    "fontSize": 14,
    "fontWeight": undefined,
    "height": undefined,
    "minWidth": undefined,
    "pl": undefined,
    "pr": undefined,
    "shape": undefined,
  },
}
`;

exports[`mobile theme Badge fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme Badge fuzz: size="m" kind="flat" 1`] = `
Object {
  "Badge": Object {
    "align": undefined,
    "bg": undefined,
    "color": undefined,
    "fontWeight": undefined,
    "height": undefined,
    "minWidth": undefined,
    "pl": undefined,
    "pr": undefined,
    "shape": undefined,
  },
}
`;

exports[`mobile theme Badge fuzz: size="s" 1`] = `
Object {
  "Badge": Object {
    "fontSize": 11,
    "height": 14,
    "minWidth": 14,
    "pl": 3.5,
    "pr": 3.5,
  },
}
`;

exports[`mobile theme Badge fuzz: size="s" kind="flat" 1`] = `
Object {
  "Badge": Object {
    "align": undefined,
    "bg": undefined,
    "color": undefined,
    "fontSize": 11,
    "fontWeight": undefined,
    "height": undefined,
    "minWidth": undefined,
    "pl": undefined,
    "pr": undefined,
    "shape": undefined,
  },
}
`;

exports[`mobile theme Badge snap 1`] = `
Object {
  "defaultProps": Object {
    "animateChange": "slide",
    "kind": "fill",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Badge": Array [
      Object {
        "cursor": "inherit",
        "fontSize": [Function],
        "userSelect": false,
        "zIndex": 2,
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "align": "center",
            "bg": "red500",
            "color": "white",
            "fontWeight": 600,
            "height": [Function],
            "minWidth": [Function],
            "pl": [Function],
            "pr": [Function],
            "shape": "pill",
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "shape": "circle",
          },
        ],
      },
    ],
  },
}
`;

exports[`mobile theme Banner base 1`] = `
Object {
  "Card": Object {
    "displayOutside": "block",
    "rounded": 5,
  },
  "Close": Object {
    "bgActive": "black16",
    "bgHover": "black8",
    "color": "gray28",
    "component": #IconCross,
    "pb": 4,
    "pl": 4,
    "position": "absolute",
    "pr": 4,
    "pt": 4,
    "right": 4,
    "rounded": "circle",
    "size": "s",
    "top": 4,
    "transition": "150ms cubic-bezier(0.4, 0, 0.2, 1)",
  },
  "Content": Object {
    "pb": 16,
    "pl": 16,
    "pr": 16,
    "pt": 10,
  },
  "Image": Object {
    "order": 1,
    "pb": 0,
    "pl": 0,
    "pr": 0,
    "pt": 0,
  },
}
`;

exports[`mobile theme Banner fuzz: column 1`] = `
Object {
  "Content": Object {
    "pb": 10,
    "pl": 10,
    "pr": 10,
  },
  "Image": Object {
    "order": 0,
  },
}
`;

exports[`mobile theme Banner fuzz: column=false 1`] = `Object {}`;

exports[`mobile theme Banner snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Card": Array [
      Object {
        "displayOutside": "block",
        "rounded": 12,
      },
      Object {
        "rounded": 5,
      },
    ],
    "Close": Array [
      Object {
        "bgActive": "black16",
        "bgHover": "black8",
        "color": "gray28",
        "component": #IconCross,
        "pb": 8,
        "pl": 8,
        "position": "absolute",
        "pr": 8,
        "pt": 8,
        "right": 4,
        "rounded": "circle",
        "size": "s",
        "top": 4,
        "transition": "150ms cubic-bezier(0.4, 0, 0.2, 1)",
      },
      Object {
        "pb": 4,
        "pl": 4,
        "pr": 4,
        "pt": 4,
      },
    ],
    "Content": Array [
      Object {
        "pb": 12,
        "pl": 12,
        "pr": 12,
        "pt": 12,
      },
      Object {
        "pb": 10,
        "pl": 10,
        "pr": 10,
        "pt": 10,
      },
      Object {
        "pb": 32,
        "pl": 32,
        "pr": 32,
        "pt": 28,
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "pb": 16,
            "pl": 16,
            "pr": 16,
            "pt": 12,
          },
        ],
      },
      Object {
        "pb": 16,
        "pl": 16,
        "pr": 16,
        "pt": 10,
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "pr": 8,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "pb": 10,
            "pl": 10,
            "pr": 10,
            "pt": 10,
          },
        ],
      },
    ],
    "Image": Array [
      Object {
        "order": [Function],
      },
      Object {
        "pb": 4,
        "pl": 4,
        "pr": 4,
        "pt": 4,
      },
      Object {
        "pb": 0,
        "pl": 0,
        "pr": 0,
        "pt": 0,
      },
    ],
  },
}
`;

exports[`mobile theme Button base 1`] = `
Object {
  "Button": Object {
    "bg": "blue500",
    "bgActive": "blue600",
    "bgChecked": "blue600",
    "bgDisabled": "blue300",
    "borderColor": "transparent",
    "borderRadius": 5,
    "borderStyle": "solid",
    "borderWidth": 1,
    "color": "white",
    "colorDisabled": "blue50",
    "focus": false,
    "minHeight": "m",
    "pb": 6,
    "pl": 16,
    "pr": 16,
    "pt": 6,
    "shrink": false,
    "userSelect": false,
  },
  "IconAfter": Object {
    "size": "s",
  },
  "IconBefore": Object {
    "size": "s",
  },
  "Spinner": Object {
    "size": "m",
  },
  "Text": Object {
    "crop": true,
    "dense": true,
    "ml": -1,
    "size": "m",
    "valignSelf": "middle",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="accent" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "green500",
    "bgActive": "green600",
    "bgChecked": undefined,
    "bgDisabled": "gray4",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="accent" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "green500",
    "bgActive": "green600",
    "bgChecked": undefined,
    "bgDisabled": "gray4",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="accent" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "green500",
    "bgActive": "green600",
    "bgChecked": undefined,
    "bgDisabled": "gray4",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="accent" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "green500",
    "bgActive": "green600",
    "bgChecked": undefined,
    "bgDisabled": "gray4",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="appInstall" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "gray4",
    "bgActive": "gray8",
    "bgChecked": undefined,
    "bgDisabled": "gray4",
    "color": "blue500",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="appInstall" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "gray4",
    "bgActive": "gray8",
    "bgChecked": undefined,
    "bgDisabled": "gray4",
    "color": "blue500",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="appInstall" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "gray4",
    "bgActive": "gray8",
    "bgChecked": undefined,
    "bgDisabled": "gray4",
    "color": "blue500",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="appInstall" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "gray4",
    "bgActive": "gray8",
    "bgChecked": undefined,
    "bgDisabled": "gray4",
    "color": "blue500",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="default" checked loading 1`] = `
Object {
  "Button": Object {
    "bgActive": "blue800",
    "bgChecked": undefined,
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="default" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bgActive": "blue800",
    "bgChecked": undefined,
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="default" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "gray4",
    "bgActive": "gray8",
    "bgChecked": undefined,
    "bgDisabled": "gray4",
    "color": "black",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="default" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "gray4",
    "bgActive": "gray8",
    "bgChecked": undefined,
    "bgDisabled": "gray4",
    "color": "black",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="defaultDark" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "gray68",
    "bgActive": "gray76",
    "bgChecked": undefined,
    "bgDisabled": "gray76",
    "colorDisabled": "gray40",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="defaultDark" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "gray68",
    "bgActive": "gray76",
    "bgChecked": undefined,
    "bgDisabled": "gray76",
    "colorDisabled": "gray40",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="defaultDark" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "gray68",
    "bgActive": "gray76",
    "bgChecked": undefined,
    "bgDisabled": "gray76",
    "colorDisabled": "gray40",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="defaultDark" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "gray68",
    "bgActive": "gray76",
    "bgChecked": undefined,
    "bgDisabled": "gray76",
    "colorDisabled": "gray40",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="defaultOnSurface" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "gray8",
    "bgActive": "gray12",
    "bgChecked": undefined,
    "bgDisabled": "gray8",
    "color": "black",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="defaultOnSurface" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "gray8",
    "bgActive": "gray12",
    "bgChecked": undefined,
    "bgDisabled": "gray8",
    "color": "black",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="defaultOnSurface" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "gray8",
    "bgActive": "gray12",
    "bgChecked": undefined,
    "bgDisabled": "gray8",
    "color": "black",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="defaultOnSurface" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "gray8",
    "bgActive": "gray12",
    "bgChecked": undefined,
    "bgDisabled": "gray8",
    "color": "black",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="linkIncreased" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "transparent",
    "bgActive": "gray4",
    "bgChecked": undefined,
    "bgDisabled": "white",
    "color": "blue500",
    "colorDisabled": "gray40",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="linkIncreased" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "transparent",
    "bgActive": "gray4",
    "bgChecked": undefined,
    "bgDisabled": "white",
    "color": "blue500",
    "colorDisabled": "gray40",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="linkIncreased" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "transparent",
    "bgActive": "gray4",
    "bgChecked": undefined,
    "bgDisabled": "white",
    "color": "blue500",
    "colorDisabled": "gray40",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="linkIncreased" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "transparent",
    "bgActive": "gray4",
    "bgChecked": undefined,
    "bgDisabled": "white",
    "color": "blue500",
    "colorDisabled": "gray40",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="outline" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "white",
    "bgActive": "gray8",
    "bgChecked": undefined,
    "bgDisabled": undefined,
    "borderColor": "gray8",
    "color": "black",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="outline" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "white",
    "bgActive": "gray8",
    "bgChecked": undefined,
    "bgDisabled": undefined,
    "borderColor": "gray8",
    "color": "black",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="outline" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "white",
    "bgActive": "gray8",
    "bgChecked": undefined,
    "bgDisabled": undefined,
    "borderColor": "gray8",
    "color": "black",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="outline" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "white",
    "bgActive": "gray8",
    "bgChecked": undefined,
    "bgDisabled": undefined,
    "borderColor": "gray8",
    "color": "black",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="pay" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "black",
    "bgActive": "gray76",
    "bgChecked": undefined,
    "bgDisabled": "gray68",
    "colorDisabled": "gray40",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="pay" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "black",
    "bgActive": "gray76",
    "bgChecked": undefined,
    "bgDisabled": "gray68",
    "colorDisabled": "gray40",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="pay" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "black",
    "bgActive": "gray76",
    "bgChecked": undefined,
    "bgDisabled": "gray68",
    "colorDisabled": "gray40",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="pay" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "black",
    "bgActive": "gray76",
    "bgChecked": undefined,
    "bgDisabled": "gray68",
    "colorDisabled": "gray40",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="primary" checked loading 1`] = `Object {}`;

exports[`mobile theme Button fuzz: children="text" preset="primary" checked loading=false 1`] = `Object {}`;

exports[`mobile theme Button fuzz: children="text" preset="primary" checked=false loading 1`] = `Object {}`;

exports[`mobile theme Button fuzz: children="text" preset="primary" checked=false loading=false 1`] = `Object {}`;

exports[`mobile theme Button fuzz: children="text" preset="secondary" checked loading 1`] = `
Object {
  "Button": Object {
    "bg": "blue50",
    "bgActive": "blue100",
    "bgChecked": undefined,
    "bgDisabled": "gray4",
    "color": "blue500",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="secondary" checked loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "blue50",
    "bgActive": "blue100",
    "bgChecked": undefined,
    "bgDisabled": "gray4",
    "color": "blue500",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="secondary" checked=false loading 1`] = `
Object {
  "Button": Object {
    "bg": "blue50",
    "bgActive": "blue100",
    "bgChecked": undefined,
    "bgDisabled": "gray4",
    "color": "blue500",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children="text" preset="secondary" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "bg": "blue50",
    "bgActive": "blue100",
    "bgChecked": undefined,
    "bgDisabled": "gray4",
    "color": "blue500",
    "colorDisabled": "gray48",
  },
}
`;

exports[`mobile theme Button fuzz: children=["line 1",{"type":"br","key":"","ref":null,"props":{},"_owner":null,"_store":{}},"line 2"] size="l" multiline 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 8,
    "pt": 8,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
}
`;

exports[`mobile theme Button fuzz: children=["line 1",{"type":"br","key":"","ref":null,"props":{},"_owner":null,"_store":{}},"line 2"] size="m" multiline 1`] = `Object {}`;

exports[`mobile theme Button fuzz: children=["line 1",{"type":"br","key":"","ref":null,"props":{},"_owner":null,"_store":{}},"line 2"] size="s" multiline 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 4,
    "pt": 4,
  },
  "Spinner": Object {
    "size": "s",
  },
}
`;

exports[`mobile theme Button fuzz: kind="fill" variant="error" 1`] = `
Object {
  "Button": Object {
    "bg": "red500",
    "bgActive": "red700",
    "bgDisabled": "gray4",
    "bgHover": "red600",
    "colorDisabled": "gray48",
    "focus": "red100",
  },
}
`;

exports[`mobile theme Button fuzz: kind="fill" variant="primary" 1`] = `
Object {
  "Button": Object {
    "bgActive": "blue700",
    "bgDisabled": "gray4",
    "bgHover": "blue600",
    "colorDisabled": "gray48",
    "focus": "blue100",
  },
}
`;

exports[`mobile theme Button fuzz: kind="fill" variant="secondary" 1`] = `
Object {
  "Button": Object {
    "bg": "gray8",
    "bgActive": "gray20",
    "bgDisabled": "gray8",
    "bgHover": "gray12",
    "color": "black",
    "focus": "blue100",
  },
}
`;

exports[`mobile theme Button fuzz: kind="fill" variant="success" 1`] = `
Object {
  "Button": Object {
    "bg": "green500",
    "bgActive": "green700",
    "bgDisabled": "gray4",
    "bgHover": "green600",
    "colorDisabled": "gray48",
    "focus": "green100",
  },
}
`;

exports[`mobile theme Button fuzz: kind="fill" variant="warning" 1`] = `
Object {
  "Button": Object {
    "bg": "orange500",
    "bgActive": "orange700",
    "bgDisabled": "gray4",
    "bgHover": "orange600",
    "color": "black",
    "colorDisabled": "gray48",
    "focus": "orange100",
  },
}
`;

exports[`mobile theme Button fuzz: size="l" 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 8,
    "pt": 8,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
}
`;

exports[`mobile theme Button fuzz: size="l" children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 8,
    "pt": 8,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
}
`;

exports[`mobile theme Button fuzz: size="l" iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 8,
    "pt": 8,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "mr": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="l" iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 8,
    "pr": 12,
    "pt": 8,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "mr": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="l" iconBefore={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 8,
    "pt": 8,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "ml": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="l" iconBefore={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 8,
    "pl": 12,
    "pt": 8,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "ml": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="l" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 8,
    "pt": 8,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "ml": 6,
    "mr": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="l" iconBefore={jsx} iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "l",
    "pb": 8,
    "pl": 12,
    "pr": 12,
    "pt": 8,
  },
  "IconAfter": Object {
    "size": "m",
  },
  "IconBefore": Object {
    "size": "m",
  },
  "Spinner": Object {
    "size": "l",
  },
  "Text": Object {
    "ml": 6,
    "mr": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme Button fuzz: size="m" children="text" 1`] = `Object {}`;

exports[`mobile theme Button fuzz: size="m" iconAfter={jsx} 1`] = `
Object {
  "Text": Object {
    "mr": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="m" iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "pr": 12,
  },
  "Text": Object {
    "mr": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="m" iconBefore={jsx} 1`] = `
Object {
  "Text": Object {
    "ml": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="m" iconBefore={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "pl": 12,
  },
  "Text": Object {
    "ml": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="m" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "Text": Object {
    "ml": 6,
    "mr": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="m" iconBefore={jsx} iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "pl": 12,
    "pr": 12,
  },
  "Text": Object {
    "ml": 6,
    "mr": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="s" 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 4,
    "pt": 4,
  },
  "Spinner": Object {
    "size": "s",
  },
}
`;

exports[`mobile theme Button fuzz: size="s" children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 4,
    "pt": 4,
  },
  "Spinner": Object {
    "size": "s",
  },
}
`;

exports[`mobile theme Button fuzz: size="s" iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 4,
    "pt": 4,
  },
  "Spinner": Object {
    "size": "s",
  },
  "Text": Object {
    "mr": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="s" iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 4,
    "pr": 12,
    "pt": 4,
  },
  "Spinner": Object {
    "size": "s",
  },
  "Text": Object {
    "mr": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="s" iconBefore={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 4,
    "pt": 4,
  },
  "Spinner": Object {
    "size": "s",
  },
  "Text": Object {
    "ml": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="s" iconBefore={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 4,
    "pl": 12,
    "pt": 4,
  },
  "Spinner": Object {
    "size": "s",
  },
  "Text": Object {
    "ml": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="s" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 4,
    "pt": 4,
  },
  "Spinner": Object {
    "size": "s",
  },
  "Text": Object {
    "ml": 6,
    "mr": 6,
  },
}
`;

exports[`mobile theme Button fuzz: size="s" iconBefore={jsx} iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "minHeight": "s",
    "pb": 4,
    "pl": 12,
    "pr": 12,
    "pt": 4,
  },
  "Spinner": Object {
    "size": "s",
  },
  "Text": Object {
    "ml": 6,
    "mr": 6,
  },
}
`;

exports[`mobile theme Button snap 1`] = `
Object {
  "defaultProps": Object {
    "preset": "primary",
    "size": "m",
    "type": "button",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Button": Array [
      Object {
        "borderColor": "transparent",
        "borderRadius": 5,
        "borderStyle": "solid",
        "borderWidth": 1,
        "focus": false,
        "minHeight": [Function],
        "pb": [Function],
        "pl": 16,
        "pr": 16,
        "pt": [Function],
        "shrink": false,
        "userSelect": false,
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "pl": 12,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "pr": 12,
          },
        ],
      },
      Object {
        "$switch": "preset",
        "accent": Array [
          Object {
            "bg": "green500",
            "bgActive": "green600",
            "bgDisabled": "gray4",
            "color": "white",
            "colorDisabled": "gray48",
          },
        ],
        "appInstall": Array [
          Object {
            "bg": "gray4",
            "bgActive": "gray8",
            "bgDisabled": "gray4",
            "color": "blue500",
            "colorDisabled": "gray48",
          },
        ],
        "default": Array [
          Object {
            "bg": "gray4",
            "bgActive": "gray8",
            "bgDisabled": "gray4",
            "color": "black",
            "colorDisabled": "gray48",
          },
          Object {
            "$if": [Function],
            "$then": Array [
              Object {
                "bg": "blue500",
                "bgActive": "blue800",
                "bgDisabled": "blue300",
                "color": "white",
                "colorDisabled": "blue50",
              },
            ],
          },
        ],
        "defaultDark": Array [
          Object {
            "bg": "gray68",
            "bgActive": "gray76",
            "bgDisabled": "gray76",
            "color": "white",
            "colorDisabled": "gray40",
          },
        ],
        "defaultOnSurface": Array [
          Object {
            "bg": "gray8",
            "bgActive": "gray12",
            "bgDisabled": "gray8",
            "color": "black",
            "colorDisabled": "gray48",
          },
        ],
        "linkIncreased": Array [
          Object {
            "bg": "transparent",
            "bgActive": "gray4",
            "bgDisabled": "white",
            "color": "blue500",
            "colorDisabled": "gray40",
          },
        ],
        "outline": Array [
          Object {
            "bg": "white",
            "bgActive": "gray8",
            "borderColor": "gray8",
            "color": "black",
            "colorDisabled": "gray48",
          },
        ],
        "pay": Array [
          Object {
            "bg": "black",
            "bgActive": "gray76",
            "bgDisabled": "gray68",
            "color": "white",
            "colorDisabled": "gray40",
          },
        ],
        "primary": Array [
          Object {
            "bg": "blue500",
            "bgActive": "blue600",
            "bgChecked": "blue600",
            "bgDisabled": "blue300",
            "color": "white",
            "colorDisabled": "blue50",
          },
        ],
        "secondary": Array [
          Object {
            "bg": "blue50",
            "bgActive": "blue100",
            "bgDisabled": "gray4",
            "color": "blue500",
            "colorDisabled": "gray48",
          },
        ],
      },
      Object {
        "$switch": "kind",
        "fill": Array [
          Object {
            "bg": "blue500",
            "bgActive": "blue600",
            "bgChecked": "blue600",
            "bgDisabled": "blue300",
            "color": "white",
          },
          Object {
            "$switch": "variant",
            "error": Array [
              Object {
                "bg": "red500",
                "bgActive": "red700",
                "bgDisabled": "gray4",
                "bgHover": "red600",
                "colorDisabled": "gray48",
                "focus": "red100",
              },
            ],
            "primary": Array [
              Object {
                "bg": "blue500",
                "bgActive": "blue700",
                "bgDisabled": "gray4",
                "bgHover": "blue600",
                "colorDisabled": "gray48",
                "focus": "blue100",
              },
            ],
            "secondary": Array [
              Object {
                "bg": "gray8",
                "bgActive": "gray20",
                "bgDisabled": "gray8",
                "bgHover": "gray12",
                "color": "black",
                "focus": "blue100",
              },
            ],
            "success": Array [
              Object {
                "bg": "green500",
                "bgActive": "green700",
                "bgDisabled": "gray4",
                "bgHover": "green600",
                "colorDisabled": "gray48",
                "focus": "green100",
              },
            ],
            "warning": Array [
              Object {
                "bg": "orange500",
                "bgActive": "orange700",
                "bgDisabled": "gray4",
                "bgHover": "orange600",
                "color": "black",
                "colorDisabled": "gray48",
                "focus": "orange100",
              },
            ],
          },
        ],
        "flat": Array [
          Object {
            "bg": "gray30",
            "bgActive": "gray50",
            "bgChecked": "gray30",
            "bgHover": "gray40",
            "borderColor": "gray30",
            "borderColorActive": "gra50",
            "borderColorDisabled": "gray20",
            "borderColorHover": "gray40",
          },
          Object {
            "$switch": "variant",
            "error": Array [
              Object {
                "color": "red50",
                "colorActive": "red70",
                "colorDisabled": "red30",
                "colorHover": "red60",
              },
            ],
            "primary": Array [
              Object {
                "color": "blue50",
                "colorActive": "blue70",
                "colorDisabled": "blue30",
                "colorHover": "blue60",
              },
            ],
            "secondary": Array [
              Object {
                "color": "gray50",
                "colorActive": "gray70",
                "colorDisabled": "gray30",
                "colorHover": "gray60",
              },
            ],
            "success": Array [
              Object {
                "color": "green50",
                "colorActive": "green70",
                "colorDisabled": "green30",
                "colorHover": "green60",
              },
            ],
            "warning": Array [
              Object {
                "color": "yellow50",
                "colorActive": "yellow70",
                "colorDisabled": "yellow30",
                "colorHover": "yellow60",
              },
            ],
          },
        ],
        "outline": Array [
          Object {
            "bg": "gray32",
            "bgActive": "gray52",
            "bgChecked": "gray32",
            "bgHover": "gray40",
            "borderColor": "gray32",
            "borderColorActive": "gra52",
            "borderColorDisabled": "gray24",
            "borderColorHover": "gray40",
          },
          Object {
            "$switch": "variant",
            "error": Array [
              Object {
                "color": "red50",
                "colorActive": "red70",
                "colorDisabled": "red30",
                "colorHover": "red60",
              },
            ],
            "primary": Array [
              Object {
                "color": "blue500",
                "colorActive": "blue700",
                "colorDisabled": "blue300",
                "colorHover": "blue600",
              },
              Object {
                "$if": [Function],
                "$then": Array [
                  Object {
                    "bg": "red300",
                    "color": "red500",
                    "colorActive": "red700",
                    "colorDisabled": "red300",
                    "colorHover": "red600",
                  },
                ],
              },
            ],
            "secondary": Array [
              Object {
                "color": "gray50",
                "colorActive": "gray70",
                "colorDisabled": "gray30",
                "colorHover": "gray60",
              },
            ],
            "success": Array [
              Object {
                "color": "green50",
                "colorActive": "green70",
                "colorDisabled": "green30",
                "colorHover": "green60",
              },
            ],
            "warning": Array [
              Object {
                "color": "yellow50",
                "colorActive": "yellow70",
                "colorDisabled": "yellow30",
                "colorHover": "yellow60",
              },
            ],
          },
        ],
      },
    ],
    "IconAfter": Array [
      Object {
        "size": [Function],
      },
    ],
    "IconBefore": Array [
      Object {
        "size": [Function],
      },
    ],
    "Spinner": Array [
      Object {
        "size": [Function],
      },
    ],
    "Text": Array [
      Object {
        "crop": true,
        "ml": -1,
        "size": "m",
        "valignSelf": "middle",
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "ml": 6,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "mr": 6,
          },
        ],
      },
      Object {
        "dense": true,
      },
    ],
  },
}
`;

exports[`mobile theme Card base 1`] = `
Object {
  "Card": Object {
    "displayOutside": "block",
    "rounded": 5,
  },
  "Close": Object {
    "bgActive": "black16",
    "bgHover": "black8",
    "color": "gray28",
    "component": #IconCross,
    "pb": 4,
    "pl": 4,
    "position": "absolute",
    "pr": 4,
    "pt": 4,
    "right": 4,
    "rounded": "circle",
    "size": "s",
    "top": 4,
    "transition": "150ms cubic-bezier(0.4, 0, 0.2, 1)",
  },
  "Content": Object {
    "pb": 10,
    "pl": 10,
    "pr": 10,
    "pt": 10,
  },
  "Image": Object {
    "order": 1,
  },
}
`;

exports[`mobile theme Card fuzz: column 1`] = `
Object {
  "Image": Object {
    "order": 0,
  },
}
`;

exports[`mobile theme Card fuzz: column=false 1`] = `Object {}`;

exports[`mobile theme Card snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Card": Array [
      Object {
        "displayOutside": "block",
        "rounded": 12,
      },
      Object {
        "rounded": 5,
      },
    ],
    "Close": Array [
      Object {
        "bgActive": "black16",
        "bgHover": "black8",
        "color": "gray28",
        "component": #IconCross,
        "pb": 8,
        "pl": 8,
        "position": "absolute",
        "pr": 8,
        "pt": 8,
        "right": 4,
        "rounded": "circle",
        "size": "s",
        "top": 4,
        "transition": "150ms cubic-bezier(0.4, 0, 0.2, 1)",
      },
      Object {
        "pb": 4,
        "pl": 4,
        "pr": 4,
        "pt": 4,
      },
    ],
    "Content": Array [
      Object {
        "pb": 12,
        "pl": 12,
        "pr": 12,
        "pt": 12,
      },
      Object {
        "pb": 10,
        "pl": 10,
        "pr": 10,
        "pt": 10,
      },
    ],
    "Image": Array [
      Object {
        "order": [Function],
      },
    ],
  },
}
`;

exports[`mobile theme Checkbox base 1`] = `
Object {
  "Icon": Object {},
  "Label": Object {
    "ml": 16,
    "size": "m",
  },
  "Switch": Object {
    "adjacentSelector": "input",
    "bg": "gray8",
    "bgActive": "gray12",
    "bgDisabled": "gray4",
    "borderRadius": 2,
    "color": "white",
    "height": 18,
    "shape": undefined,
    "shrink": false,
    "userSelect": false,
    "variant": "primary",
  },
  "Toggle": Object {
    "userSelect": false,
    "valign": "baseline",
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked indeterminate 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxIndeterminate,
  },
  "Switch": Object {
    "bg": "blue500",
    "bgActive": "blue700",
    "bgDisabled": "gray28",
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked indeterminate=false 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "bg": "blue500",
    "bgActive": "blue700",
    "bgDisabled": "gray28",
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked variant="error" 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "bg": "red500",
    "bgActive": "red700",
    "bgDisabled": "gray28",
    "variant": "error",
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked variant="primary" 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "bg": "blue500",
    "bgActive": "blue700",
    "bgDisabled": "gray28",
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked variant="secondary" 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "bg": "gray48",
    "bgActive": "gray56",
    "bgDisabled": "gray28",
    "variant": "secondary",
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked variant="success" 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "bg": "green500",
    "bgActive": "green700",
    "bgDisabled": "gray28",
    "variant": "success",
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked variant="warning" 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxChecked,
  },
  "Switch": Object {
    "bg": "orange500",
    "bgActive": "orange700",
    "bgDisabled": "gray28",
    "variant": "warning",
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked=false indeterminate 1`] = `
Object {
  "Icon": Object {
    "component": #IconCheckboxIndeterminate,
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked=false indeterminate=false 1`] = `Object {}`;

exports[`mobile theme Checkbox fuzz: checked=false variant="error" 1`] = `
Object {
  "Switch": Object {
    "variant": "error",
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked=false variant="primary" 1`] = `Object {}`;

exports[`mobile theme Checkbox fuzz: checked=false variant="secondary" 1`] = `
Object {
  "Switch": Object {
    "variant": "secondary",
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked=false variant="success" 1`] = `
Object {
  "Switch": Object {
    "variant": "success",
  },
}
`;

exports[`mobile theme Checkbox fuzz: checked=false variant="warning" 1`] = `
Object {
  "Switch": Object {
    "variant": "warning",
  },
}
`;

exports[`mobile theme Checkbox fuzz: size="l" 1`] = `Object {}`;

exports[`mobile theme Checkbox fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme Checkbox fuzz: size="s" 1`] = `Object {}`;

exports[`mobile theme Checkbox snap 1`] = `
Object {
  "defaultProps": Object {
    "labelPosition": "end",
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Icon": Array [
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "component": #IconCheckboxChecked,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "component": #IconCheckboxIndeterminate,
          },
        ],
      },
    ],
    "Label": Array [
      Object {
        "size": "m",
      },
      Object {
        "$switch": "labelPosition",
        "end": Array [
          Object {
            "ml": 16,
          },
        ],
        "start": Array [
          Object {
            "mr": 16,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "color": "gray48",
          },
        ],
      },
    ],
    "Switch": Array [
      Object {
        "adjacentSelector": "input",
        "shape": [Function],
        "shrink": false,
        "userSelect": false,
        "variant": [Function],
      },
      Object {
        "bg": "gray8",
        "bgActive": "gray12",
        "bgDisabled": "gray4",
        "borderRadius": 2,
        "color": "white",
        "height": 18,
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "bgDisabled": "gray28",
          },
          Object {
            "$switch": "variant",
            "error": Array [
              Object {
                "bg": "red500",
                "bgActive": "red700",
              },
            ],
            "primary": Array [
              Object {
                "bg": "blue500",
                "bgActive": "blue700",
              },
            ],
            "secondary": Array [
              Object {
                "bg": "gray48",
                "bgActive": "gray56",
              },
            ],
            "success": Array [
              Object {
                "bg": "green500",
                "bgActive": "green700",
              },
            ],
            "warning": Array [
              Object {
                "bg": "orange500",
                "bgActive": "orange700",
              },
            ],
          },
        ],
      },
    ],
    "Toggle": Array [
      Object {
        "userSelect": false,
        "valign": "baseline",
      },
    ],
  },
}
`;

exports[`mobile theme Icon base 1`] = `
Object {
  "Icon": Object {
    "color": undefined,
    "height": 20,
    "shrink": false,
    "valignSelf": "middle",
  },
}
`;

exports[`mobile theme Icon fuzz: size="l" 1`] = `
Object {
  "Icon": Object {
    "height": 24,
  },
}
`;

exports[`mobile theme Icon fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme Icon fuzz: size="s" 1`] = `
Object {
  "Icon": Object {
    "height": 16,
  },
}
`;

exports[`mobile theme Icon fuzz: size="xl" 1`] = `
Object {
  "Icon": Object {
    "height": 28,
  },
}
`;

exports[`mobile theme Icon fuzz: variant="error" 1`] = `
Object {
  "Icon": Object {
    "color": "red500",
  },
}
`;

exports[`mobile theme Icon fuzz: variant="primary" 1`] = `
Object {
  "Icon": Object {
    "color": "blue500",
  },
}
`;

exports[`mobile theme Icon fuzz: variant="secondary" 1`] = `
Object {
  "Icon": Object {
    "color": "gray52",
  },
}
`;

exports[`mobile theme Icon fuzz: variant="success" 1`] = `
Object {
  "Icon": Object {
    "color": "green500",
  },
}
`;

exports[`mobile theme Icon fuzz: variant="warning" 1`] = `
Object {
  "Icon": Object {
    "color": "yellow500",
  },
}
`;

exports[`mobile theme Icon snap 1`] = `
Object {
  "defaultProps": Object {
    "size": "m",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Icon": Array [
      Object {
        "color": [Function],
        "height": [Function],
        "shrink": false,
        "valignSelf": "middle",
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "height": [Function],
          },
        ],
      },
      Object {
        "color": [Function],
      },
    ],
  },
}
`;

exports[`mobile theme Image base 1`] = `
Object {
  "Image": Object {
    "height": "auto",
    "maxWidth": 1,
  },
}
`;

exports[`mobile theme Image snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Image": Array [
      Object {
        "height": "auto",
        "maxWidth": 1,
      },
    ],
  },
}
`;

exports[`mobile theme Input base 1`] = `
Object {
  "IconAfter": Object {
    "color": "gray28",
    "ml": 10,
    "mr": 10,
  },
  "IconBefore": Object {
    "color": "gray28",
    "ml": 10,
    "mr": 8,
    "size": "s",
  },
  "Input": Object {
    "bg": "gray4",
    "borderRadius": 5,
    "color": "black",
    "colorDisabled": "gray40",
    "focus": true,
    "fontSize": 16,
    "height": "m",
    "placeholderColor": "gray48",
    "width": 1,
  },
  "InputField": Object {
    "grow": true,
    "pl": 16,
    "pr": 16,
    "valign": "middle",
  },
  "Postfix": Object {
    "ml": 4,
  },
  "Prefix": Object {
    "mr": 4,
  },
}
`;

exports[`mobile theme Input fuzz: clearable="always" 1`] = `
Object {
  "IconAfter": Object {
    "area": 10,
    "component": #IconCross,
    "size": "s",
  },
}
`;

exports[`mobile theme Input fuzz: size="l" 1`] = `
Object {
  "IconBefore": Object {
    "size": "m",
  },
  "Input": Object {
    "height": "l",
  },
}
`;

exports[`mobile theme Input fuzz: size="l" iconAfter={jsx} 1`] = `
Object {
  "IconBefore": Object {
    "size": "m",
  },
  "Input": Object {
    "height": "l",
  },
  "InputField": Object {
    "pr": "none",
  },
}
`;

exports[`mobile theme Input fuzz: size="l" iconBefore={jsx} 1`] = `
Object {
  "IconBefore": Object {
    "size": "m",
  },
  "Input": Object {
    "height": "l",
  },
  "InputField": Object {
    "pl": "none",
  },
}
`;

exports[`mobile theme Input fuzz: size="l" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "IconBefore": Object {
    "size": "m",
  },
  "Input": Object {
    "height": "l",
  },
  "InputField": Object {
    "pl": "none",
    "pr": "none",
  },
}
`;

exports[`mobile theme Input fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme Input fuzz: size="m" iconAfter={jsx} 1`] = `
Object {
  "InputField": Object {
    "pr": "none",
  },
}
`;

exports[`mobile theme Input fuzz: size="m" iconBefore={jsx} 1`] = `
Object {
  "InputField": Object {
    "pl": "none",
  },
}
`;

exports[`mobile theme Input fuzz: size="m" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "InputField": Object {
    "pl": "none",
    "pr": "none",
  },
}
`;

exports[`mobile theme Input fuzz: size="s" 1`] = `
Object {
  "IconAfter": Object {
    "ml": 8,
    "mr": 8,
  },
  "Input": Object {
    "fontSize": 12,
    "height": "s",
  },
  "InputField": Object {
    "pl": 12,
    "pr": 12,
  },
}
`;

exports[`mobile theme Input fuzz: size="s" iconAfter={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "ml": 8,
    "mr": 8,
  },
  "Input": Object {
    "fontSize": 12,
    "height": "s",
  },
  "InputField": Object {
    "pl": 12,
    "pr": "none",
  },
}
`;

exports[`mobile theme Input fuzz: size="s" iconBefore={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "ml": 8,
    "mr": 8,
  },
  "Input": Object {
    "fontSize": 12,
    "height": "s",
  },
  "InputField": Object {
    "pl": "none",
    "pr": 12,
  },
}
`;

exports[`mobile theme Input fuzz: size="s" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "ml": 8,
    "mr": 8,
  },
  "Input": Object {
    "fontSize": 12,
    "height": "s",
  },
  "InputField": Object {
    "pl": "none",
    "pr": "none",
  },
}
`;

exports[`mobile theme Input fuzz: value="value" 1`] = `Object {}`;

exports[`mobile theme Input fuzz: value="value" clearable="always" 1`] = `
Object {
  "IconAfter": Object {
    "area": 10,
    "component": #IconCross,
    "size": "s",
  },
}
`;

exports[`mobile theme Input fuzz: variant="error" 1`] = `
Object {
  "Input": Object {
    "bg": "red50",
  },
}
`;

exports[`mobile theme Input fuzz: variant="primary" 1`] = `Object {}`;

exports[`mobile theme Input fuzz: variant="secondary" 1`] = `
Object {
  "Input": Object {
    "bg": "gray8",
  },
}
`;

exports[`mobile theme Input fuzz: variant="success" 1`] = `
Object {
  "Input": Object {
    "bg": "green50",
  },
}
`;

exports[`mobile theme Input fuzz: variant="warning" 1`] = `
Object {
  "Input": Object {
    "bg": "orange50",
  },
}
`;

exports[`mobile theme Input snap 1`] = `
Object {
  "defaultProps": Object {
    "deletePlaceholderOnFocus": true,
    "kind": "fill",
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "IconAfter": Array [
      Object {
        "color": "gray28",
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "area": 10,
            "component": #IconCross,
            "size": [Function],
          },
        ],
      },
      Object {
        "ml": [Function],
        "mr": [Function],
      },
    ],
    "IconBefore": Array [
      Object {
        "color": "gray28",
        "size": [Function],
      },
      Object {
        "ml": 10,
        "mr": 8,
      },
    ],
    "Input": Array [
      Object {
        "focus": true,
        "height": [Function],
        "width": 1,
      },
      Object {
        "bg": [Function],
        "borderRadius": 5,
        "color": "black",
        "colorDisabled": "gray40",
        "fontSize": [Function],
        "placeholderColor": "gray48",
      },
    ],
    "InputField": Array [
      Object {
        "grow": true,
        "valign": "middle",
      },
      Object {
        "pl": [Function],
        "pr": [Function],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "pl": "none",
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "pr": "none",
          },
        ],
      },
    ],
    "Postfix": Array [
      Object {
        "ml": 4,
      },
    ],
    "Prefix": Array [
      Object {
        "mr": 4,
      },
    ],
  },
}
`;

exports[`mobile theme Link base 1`] = `
Object {
  "Link": Object {
    "color": "blue500",
    "colorVisited": "purple600",
  },
}
`;

exports[`mobile theme Link fuzz: variant="primary" 1`] = `Object {}`;

exports[`mobile theme Link fuzz: variant="secondary" 1`] = `
Object {
  "Link": Object {
    "color": "gray52",
  },
}
`;

exports[`mobile theme Link snap 1`] = `
Object {
  "defaultProps": Object {
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Link": Array [
      Object {
        "colorVisited": "purple600",
      },
      Object {
        "$switch": "variant",
        "primary": Array [
          Object {
            "color": "blue500",
          },
        ],
        "secondary": Array [
          Object {
            "color": "gray52",
          },
        ],
      },
    ],
  },
}
`;

exports[`mobile theme ListItem base 1`] = `
Object {
  "Caption": Object {
    "color": "gray40",
    "size": "s",
  },
  "Label": Object {
    "size": "m",
  },
  "Link": Object {
    "size": "s",
  },
  "ListItem": Object {
    "minHeight": 52,
    "pb": 12,
    "pl": 16,
    "pr": 16,
    "pt": 10,
    "spacing": 16,
    "valign": "middle",
  },
  "StackText": Object {
    "spacing": 2,
  },
}
`;

exports[`mobile theme ListItem fuzz: disabled 1`] = `
Object {
  "Caption": Object {
    "color": "gray32",
  },
  "Label": Object {
    "color": "gray48",
  },
}
`;

exports[`mobile theme ListItem fuzz: onClick=undefined 1`] = `
Object {
  "ListItem": Object {
    "bgActive": "gray4",
  },
}
`;

exports[`mobile theme ListItem snap 1`] = `
Object {
  "defaultProps": Object {
    "afterTreshold": 82,
    "beforeTreshold": 82,
  },
  "mapProps": [Function],
  "scheme": Object {
    "Caption": Array [
      Object {
        "color": "gray40",
        "size": "s",
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "color": "gray32",
          },
        ],
      },
    ],
    "Label": Array [
      Object {
        "size": "m",
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "color": "gray48",
          },
        ],
      },
    ],
    "Link": Array [
      Object {
        "size": "s",
      },
    ],
    "ListItem": Array [
      Object {
        "minHeight": 52,
        "pb": 12,
        "pl": 16,
        "pr": 16,
        "pt": 10,
        "spacing": 16,
        "valign": "middle",
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "bgActive": "gray4",
          },
        ],
      },
    ],
    "StackText": Array [
      Object {
        "spacing": 2,
      },
    ],
  },
}
`;

exports[`mobile theme Radio base 1`] = `
Object {
  "Icon": Object {},
  "Label": Object {
    "ml": 16,
    "size": "m",
  },
  "Switch": Object {
    "adjacentSelector": "input",
    "bg": "gray8",
    "bgActive": "gray12",
    "bgDisabled": "gray4",
    "color": "white",
    "focus": false,
    "height": 18,
    "ml": 1,
    "mr": 1,
    "shape": undefined,
    "shrink": false,
    "userSelect": false,
    "variant": "primary",
  },
  "Toggle": Object {
    "userSelect": false,
    "valign": "baseline",
  },
}
`;

exports[`mobile theme Radio fuzz: size="l" 1`] = `Object {}`;

exports[`mobile theme Radio fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme Radio fuzz: size="s" 1`] = `Object {}`;

exports[`mobile theme Radio fuzz: variant="error" checked 1`] = `
Object {
  "Icon": Object {
    "component": #IconRadioChecked,
  },
  "Switch": Object {
    "bg": "red500",
    "bgActive": "red700",
    "bgDisabled": "gray28",
    "variant": "error",
  },
}
`;

exports[`mobile theme Radio fuzz: variant="error" checked=false 1`] = `
Object {
  "Switch": Object {
    "variant": "error",
  },
}
`;

exports[`mobile theme Radio fuzz: variant="primary" checked 1`] = `
Object {
  "Icon": Object {
    "component": #IconRadioChecked,
  },
  "Switch": Object {
    "bg": "blue500",
    "bgActive": "blue700",
    "bgDisabled": "gray28",
  },
}
`;

exports[`mobile theme Radio fuzz: variant="primary" checked=false 1`] = `Object {}`;

exports[`mobile theme Radio fuzz: variant="secondary" checked 1`] = `
Object {
  "Icon": Object {
    "component": #IconRadioChecked,
  },
  "Switch": Object {
    "bg": "gray48",
    "bgActive": "gray56",
    "bgDisabled": "gray28",
    "variant": "secondary",
  },
}
`;

exports[`mobile theme Radio fuzz: variant="secondary" checked=false 1`] = `
Object {
  "Switch": Object {
    "variant": "secondary",
  },
}
`;

exports[`mobile theme Radio fuzz: variant="success" checked 1`] = `
Object {
  "Icon": Object {
    "component": #IconRadioChecked,
  },
  "Switch": Object {
    "bg": "green500",
    "bgActive": "green700",
    "bgDisabled": "gray28",
    "variant": "success",
  },
}
`;

exports[`mobile theme Radio fuzz: variant="success" checked=false 1`] = `
Object {
  "Switch": Object {
    "variant": "success",
  },
}
`;

exports[`mobile theme Radio fuzz: variant="warning" checked 1`] = `
Object {
  "Icon": Object {
    "component": #IconRadioChecked,
  },
  "Switch": Object {
    "bg": "orange500",
    "bgActive": "orange700",
    "bgDisabled": "gray28",
    "variant": "warning",
  },
}
`;

exports[`mobile theme Radio fuzz: variant="warning" checked=false 1`] = `
Object {
  "Switch": Object {
    "variant": "warning",
  },
}
`;

exports[`mobile theme Radio snap 1`] = `
Object {
  "defaultProps": Object {
    "labelPosition": "end",
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Icon": Array [
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "component": #IconRadioChecked,
          },
        ],
      },
    ],
    "Label": Array [
      Object {
        "size": "m",
      },
      Object {
        "$switch": "labelPosition",
        "end": Array [
          Object {
            "ml": 16,
          },
        ],
        "start": Array [
          Object {
            "mr": 16,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "color": "gray48",
          },
        ],
      },
    ],
    "Switch": Array [
      Object {
        "adjacentSelector": "input",
        "shape": [Function],
        "shrink": false,
        "userSelect": false,
        "variant": [Function],
      },
      Object {
        "color": "white",
      },
      Object {
        "bg": "gray8",
        "bgActive": "gray12",
        "bgDisabled": [Function],
        "focus": false,
        "height": 18,
        "ml": 1,
        "mr": 1,
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "$switch": "variant",
            "error": Array [
              Object {
                "bg": "red500",
                "bgActive": "red700",
              },
            ],
            "primary": Array [
              Object {
                "bg": "blue500",
                "bgActive": "blue700",
              },
            ],
            "secondary": Array [
              Object {
                "bg": "gray48",
                "bgActive": "gray56",
              },
            ],
            "success": Array [
              Object {
                "bg": "green500",
                "bgActive": "green700",
              },
            ],
            "warning": Array [
              Object {
                "bg": "orange500",
                "bgActive": "orange700",
              },
            ],
          },
        ],
      },
    ],
    "Toggle": Array [
      Object {
        "userSelect": false,
        "valign": "baseline",
      },
    ],
  },
}
`;

exports[`mobile theme SegmentButton base 1`] = `
Object {
  "Button": Object {
    "borderRadius": 5,
    "color": "gray48",
    "colorChecked": "black",
    "colorDisabled": "gray24",
    "focus": true,
    "grow": true,
    "height": 1,
    "position": "relative",
    "userSelect": false,
  },
  "Group": Object {
    "bg": "gray4",
    "borderRadius": 5,
    "height": 44,
    "pb": 4,
    "pl": 4,
    "pr": 4,
    "pt": 4,
    "shrink": false,
    "width": 1,
  },
  "Slide": Object {
    "bg": "white",
    "borderRadius": 5,
    "height": 1,
  },
}
`;

exports[`mobile theme SegmentButton fuzz: size="l" 1`] = `
Object {
  "Group": Object {
    "height": 50,
  },
}
`;

exports[`mobile theme SegmentButton fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme SegmentButton fuzz: size="s" 1`] = `
Object {
  "Group": Object {
    "height": 32,
  },
}
`;

exports[`mobile theme SegmentButton snap 1`] = `
Object {
  "defaultProps": Object {
    "size": "m",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Button": Array [
      Object {
        "borderRadius": 5,
        "color": "gray48",
        "colorChecked": "black",
        "colorDisabled": "gray24",
        "focus": true,
        "grow": true,
        "height": 1,
        "position": "relative",
        "userSelect": false,
      },
    ],
    "Group": Array [
      Object {
        "bg": "gray4",
        "borderRadius": 5,
        "height": [Function],
        "pb": 4,
        "pl": 4,
        "pr": 4,
        "pt": 4,
        "shrink": false,
        "width": 1,
      },
    ],
    "Slide": Array [
      Object {
        "bg": "white",
        "borderRadius": 5,
        "height": 1,
      },
    ],
  },
}
`;

exports[`mobile theme Spinner base 1`] = `
Object {
  "Spinner": Object {
    "component": #IconSpinner,
    "size": 24,
  },
}
`;

exports[`mobile theme Spinner fuzz: size="l" 1`] = `
Object {
  "Spinner": Object {
    "size": 32,
  },
}
`;

exports[`mobile theme Spinner fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme Spinner fuzz: size="s" 1`] = `
Object {
  "Spinner": Object {
    "size": 16,
  },
}
`;

exports[`mobile theme Spinner fuzz: variant="error" 1`] = `Object {}`;

exports[`mobile theme Spinner fuzz: variant="primary" 1`] = `Object {}`;

exports[`mobile theme Spinner fuzz: variant="secondary" 1`] = `Object {}`;

exports[`mobile theme Spinner fuzz: variant="success" 1`] = `Object {}`;

exports[`mobile theme Spinner fuzz: variant="warning" 1`] = `Object {}`;

exports[`mobile theme Spinner snap 1`] = `
Object {
  "defaultProps": Object {
    "size": "m",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Spinner": Array [
      Object {
        "component": #IconSpinner,
        "size": [Function],
      },
    ],
  },
}
`;

exports[`mobile theme Switcher base 1`] = `
Object {
  "Icon": Object {
    "component": #IconSwitcher,
  },
  "Label": Object {
    "ml": 16,
    "size": "m",
  },
  "Switch": Object {
    "adjacentSelector": "input",
    "bg": "gray12",
    "bgActive": "gray28",
    "bgDisabled": "gray8",
    "color": "white",
    "focus": true,
    "height": 25,
    "pb": 3,
    "pl": 3,
    "pr": 3,
    "pt": 3,
    "shape": "pill",
    "shrink": false,
    "userSelect": false,
    "variant": "primary",
    "width": 48,
  },
  "Toggle": Object {
    "userSelect": false,
    "valign": "baseline",
  },
}
`;

exports[`mobile theme Switcher fuzz: checked loading disabled 1`] = `
Object {
  "Icon": Object {
    "component": #Spinner,
  },
  "Label": Object {
    "color": "gray48",
  },
  "Switch": Object {
    "align": "center",
    "bg": "transparent",
    "bgActive": "transparent",
    "bgDisabled": "transparent",
    "color": "gray28",
    "focus": false,
  },
}
`;

exports[`mobile theme Switcher fuzz: checked loading disabled=false 1`] = `
Object {
  "Icon": Object {
    "component": #Spinner,
  },
  "Switch": Object {
    "align": "center",
    "bg": "transparent",
    "bgActive": "transparent",
    "bgDisabled": "transparent",
    "color": "gray28",
    "focus": false,
  },
}
`;

exports[`mobile theme Switcher fuzz: checked loading=false disabled 1`] = `
Object {
  "Label": Object {
    "color": "gray48",
  },
  "Switch": Object {
    "bg": "blue500",
    "bgActive": "blue700",
    "bgDisabled": "blue300",
  },
}
`;

exports[`mobile theme Switcher fuzz: checked loading=false disabled=false 1`] = `
Object {
  "Switch": Object {
    "bg": "blue500",
    "bgActive": "blue700",
    "bgDisabled": "blue300",
  },
}
`;

exports[`mobile theme Switcher fuzz: checked=false loading disabled 1`] = `
Object {
  "Icon": Object {
    "component": #Spinner,
  },
  "Label": Object {
    "color": "gray48",
  },
  "Switch": Object {
    "align": "center",
    "bg": "transparent",
    "bgActive": "transparent",
    "bgDisabled": "transparent",
    "color": "gray28",
    "focus": false,
  },
}
`;

exports[`mobile theme Switcher fuzz: checked=false loading disabled=false 1`] = `
Object {
  "Icon": Object {
    "component": #Spinner,
  },
  "Switch": Object {
    "align": "center",
    "bg": "transparent",
    "bgActive": "transparent",
    "bgDisabled": "transparent",
    "color": "gray28",
    "focus": false,
  },
}
`;

exports[`mobile theme Switcher fuzz: checked=false loading=false disabled 1`] = `
Object {
  "Label": Object {
    "color": "gray48",
  },
}
`;

exports[`mobile theme Switcher fuzz: checked=false loading=false disabled=false 1`] = `Object {}`;

exports[`mobile theme Switcher fuzz: size="l" 1`] = `Object {}`;

exports[`mobile theme Switcher fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme Switcher fuzz: size="s" 1`] = `Object {}`;

exports[`mobile theme Switcher fuzz: variant="error" checked 1`] = `
Object {
  "Switch": Object {
    "bg": "red500",
    "bgActive": "red700",
    "bgDisabled": "gray28",
    "variant": "error",
  },
}
`;

exports[`mobile theme Switcher fuzz: variant="error" checked=false 1`] = `
Object {
  "Switch": Object {
    "bgDisabled": "gray4",
    "variant": "error",
  },
}
`;

exports[`mobile theme Switcher fuzz: variant="primary" checked 1`] = `
Object {
  "Switch": Object {
    "bg": "blue500",
    "bgActive": "blue700",
    "bgDisabled": "blue300",
  },
}
`;

exports[`mobile theme Switcher fuzz: variant="primary" checked=false 1`] = `Object {}`;

exports[`mobile theme Switcher fuzz: variant="secondary" checked 1`] = `
Object {
  "Switch": Object {
    "bg": "gray48",
    "bgActive": "gray56",
    "bgDisabled": "gray28",
    "variant": "secondary",
  },
}
`;

exports[`mobile theme Switcher fuzz: variant="secondary" checked=false 1`] = `
Object {
  "Switch": Object {
    "bgDisabled": "gray4",
    "variant": "secondary",
  },
}
`;

exports[`mobile theme Switcher fuzz: variant="success" checked 1`] = `
Object {
  "Switch": Object {
    "bg": "green500",
    "bgActive": "green700",
    "bgDisabled": "gray28",
    "variant": "success",
  },
}
`;

exports[`mobile theme Switcher fuzz: variant="success" checked=false 1`] = `
Object {
  "Switch": Object {
    "bgDisabled": "gray4",
    "variant": "success",
  },
}
`;

exports[`mobile theme Switcher fuzz: variant="warning" checked 1`] = `
Object {
  "Switch": Object {
    "bg": "orange500",
    "bgActive": "orange700",
    "bgDisabled": "gray28",
    "variant": "warning",
  },
}
`;

exports[`mobile theme Switcher fuzz: variant="warning" checked=false 1`] = `
Object {
  "Switch": Object {
    "bgDisabled": "gray4",
    "variant": "warning",
  },
}
`;

exports[`mobile theme Switcher snap 1`] = `
Object {
  "defaultProps": Object {
    "labelPosition": "end",
    "positionLoading": false,
    "shape": "pill",
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Icon": Array [
      Object {
        "component": #IconSwitcher,
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "component": #Spinner,
          },
        ],
      },
    ],
    "Label": Array [
      Object {
        "size": "m",
      },
      Object {
        "$switch": "labelPosition",
        "end": Array [
          Object {
            "ml": 16,
          },
        ],
        "start": Array [
          Object {
            "mr": 16,
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "color": "gray48",
          },
        ],
      },
    ],
    "Switch": Array [
      Object {
        "adjacentSelector": "input",
        "shape": [Function],
        "shrink": false,
        "userSelect": false,
        "variant": [Function],
      },
      Object {
        "bg": "gray12",
        "bgActive": "gray28",
        "bgDisabled": "gray4",
        "color": "white",
        "focus": true,
        "height": 25,
        "pb": 3,
        "pl": 3,
        "pr": 3,
        "pt": 3,
        "width": 48,
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "bgDisabled": "gray8",
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "bgDisabled": "gray28",
          },
          Object {
            "$switch": "variant",
            "error": Array [
              Object {
                "bg": "red500",
                "bgActive": "red700",
              },
            ],
            "primary": Array [
              Object {
                "bg": "blue500",
                "bgActive": "blue700",
                "bgDisabled": "blue300",
              },
            ],
            "secondary": Array [
              Object {
                "bg": "gray48",
                "bgActive": "gray56",
              },
            ],
            "success": Array [
              Object {
                "bg": "green500",
                "bgActive": "green700",
              },
            ],
            "warning": Array [
              Object {
                "bg": "orange500",
                "bgActive": "orange700",
              },
            ],
          },
        ],
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "align": "center",
            "bg": "transparent",
            "bgActive": "transparent",
            "bgDisabled": "transparent",
            "color": "gray28",
            "focus": false,
          },
        ],
      },
    ],
    "Toggle": Array [
      Object {
        "userSelect": false,
        "valign": "baseline",
      },
    ],
  },
}
`;

exports[`mobile theme Text base 1`] = `
Object {
  "Text": Object {
    "color": undefined,
    "fontSize": undefined,
    "lineHeight": "normal",
  },
}
`;

exports[`mobile theme Text fuzz: dense 1`] = `
Object {
  "Text": Object {
    "lineHeight": "dense",
  },
}
`;

exports[`mobile theme Text fuzz: preset="heading" 1`] = `
Object {
  "Text": Object {
    "fontSize": "l",
    "lineHeight": "dense",
  },
}
`;

exports[`mobile theme Text fuzz: preset="heading-large" 1`] = `
Object {
  "Text": Object {
    "fontSize": "l",
    "lineHeight": "dense",
  },
}
`;

exports[`mobile theme Text fuzz: preset="heading-small" 1`] = `
Object {
  "Text": Object {
    "fontSize": "m",
  },
}
`;

exports[`mobile theme Text fuzz: preset="title" 1`] = `
Object {
  "Text": Object {
    "fontSize": "xxl",
  },
}
`;

exports[`mobile theme Text fuzz: preset="title-small" 1`] = `
Object {
  "Text": Object {
    "fontSize": "xl",
    "lineHeight": "dense",
  },
}
`;

exports[`mobile theme Text fuzz: size="l" 1`] = `
Object {
  "Text": Object {
    "fontSize": "l",
  },
}
`;

exports[`mobile theme Text fuzz: size="m" 1`] = `
Object {
  "Text": Object {
    "fontSize": "m",
  },
}
`;

exports[`mobile theme Text fuzz: size="s" 1`] = `
Object {
  "Text": Object {
    "fontSize": "s",
  },
}
`;

exports[`mobile theme Text fuzz: size="xl" 1`] = `
Object {
  "Text": Object {
    "fontSize": "xl",
  },
}
`;

exports[`mobile theme Text fuzz: size="xs" 1`] = `
Object {
  "Text": Object {
    "fontSize": "xs",
  },
}
`;

exports[`mobile theme Text fuzz: size="xxl" 1`] = `
Object {
  "Text": Object {
    "fontSize": "xxl",
  },
}
`;

exports[`mobile theme Text fuzz: size="xxxl" 1`] = `
Object {
  "Text": Object {
    "fontSize": "xxxl",
  },
}
`;

exports[`mobile theme Text fuzz: variant="error" 1`] = `
Object {
  "Text": Object {
    "color": "red500",
  },
}
`;

exports[`mobile theme Text fuzz: variant="primary" 1`] = `
Object {
  "Text": Object {
    "color": "blue500",
  },
}
`;

exports[`mobile theme Text fuzz: variant="secondary" 1`] = `
Object {
  "Text": Object {
    "color": "gray52",
  },
}
`;

exports[`mobile theme Text fuzz: variant="success" 1`] = `
Object {
  "Text": Object {
    "color": "green500",
  },
}
`;

exports[`mobile theme Text fuzz: variant="warning" 1`] = `
Object {
  "Text": Object {
    "color": "yellow500",
  },
}
`;

exports[`mobile theme Text snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Text": Array [
      Object {
        "color": [Function],
        "fontSize": [Function],
        "lineHeight": "normal",
      },
      Object {
        "$if": [Function],
        "$then": Array [
          Object {
            "lineHeight": "dense",
          },
        ],
      },
    ],
  },
}
`;

exports[`mobile theme Textarea base 1`] = `
Object {
  "IconClear": Object {
    "area": 10,
    "color": "gray28",
    "component": #IconCross,
    "size": "m",
    "visible": false,
  },
  "Textarea": Object {
    "bg": "gray4",
    "borderRadius": 5,
    "color": "black",
    "colorDisabled": "gray40",
    "focus": true,
    "fontSize": 16,
    "lineHeight": "normal",
    "minHeight": "m",
    "pb": 12,
    "pl": 16,
    "placeholderColor": "gray48",
    "pr": 16,
    "pt": 12,
    "valign": "top",
  },
}
`;

exports[`mobile theme Textarea fuzz: clearable="always" 1`] = `
Object {
  "IconClear": Object {
    "visible": true,
  },
}
`;

exports[`mobile theme Textarea fuzz: size="l" 1`] = `
Object {
  "IconClear": Object {
    "size": "l",
  },
  "Textarea": Object {
    "minHeight": "l",
    "pb": 16,
    "pt": 16,
  },
}
`;

exports[`mobile theme Textarea fuzz: size="m" 1`] = `Object {}`;

exports[`mobile theme Textarea fuzz: size="s" 1`] = `
Object {
  "IconClear": Object {
    "size": "s",
  },
  "Textarea": Object {
    "fontSize": 12,
    "minHeight": "s",
    "pb": 10,
    "pl": 12,
    "pr": 12,
    "pt": 10,
  },
}
`;

exports[`mobile theme Textarea fuzz: value="value" 1`] = `Object {}`;

exports[`mobile theme Textarea fuzz: value="value" clearable="always" 1`] = `
Object {
  "IconClear": Object {
    "visible": true,
  },
}
`;

exports[`mobile theme Textarea fuzz: variant="error" 1`] = `
Object {
  "Textarea": Object {
    "bg": "red100",
  },
}
`;

exports[`mobile theme Textarea fuzz: variant="primary" 1`] = `Object {}`;

exports[`mobile theme Textarea fuzz: variant="secondary" 1`] = `
Object {
  "Textarea": Object {
    "bg": "gray8",
  },
}
`;

exports[`mobile theme Textarea fuzz: variant="success" 1`] = `
Object {
  "Textarea": Object {
    "bg": "green100",
  },
}
`;

exports[`mobile theme Textarea fuzz: variant="warning" 1`] = `
Object {
  "Textarea": Object {
    "bg": "orange100",
  },
}
`;

exports[`mobile theme Textarea snap 1`] = `
Object {
  "defaultProps": Object {
    "deletePlaceholderOnFocus": true,
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "IconClear": Array [
      Object {
        "area": 10,
        "color": "gray28",
        "component": #IconCross,
        "size": [Function],
        "visible": [Function],
      },
    ],
    "Textarea": Array [
      Object {
        "focus": true,
        "lineHeight": "normal",
        "minHeight": [Function],
        "valign": "top",
      },
      Object {
        "bg": [Function],
        "borderRadius": 5,
        "color": "black",
        "colorDisabled": "gray40",
        "placeholderColor": "gray48",
      },
      Object {
        "$switch": "size",
        "l": Array [
          Object {
            "fontSize": 16,
            "pb": 16,
            "pl": 16,
            "pr": 16,
            "pt": 16,
          },
        ],
        "m": Array [
          Object {
            "fontSize": 16,
            "pb": 12,
            "pl": 16,
            "pr": 16,
            "pt": 12,
          },
        ],
        "s": Array [
          Object {
            "fontSize": 12,
            "pb": 10,
            "pl": 12,
            "pr": 12,
            "pt": 10,
          },
        ],
      },
    ],
  },
}
`;
